--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,16 +7,10 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,26 +32,12 @@ jobs:
           python -m pip install mkdocs mkdocs-material "mkdocstrings[python]" mkdocs-jupyter
           python -m pip install -e .
           
-      - name: Verify installation
-        run: |
-          python -c "import geeadvance; print(f'GeeAdvance {geeadvance.__version__} installed successfully')"
-          mkdocs --version
-          
       - name: Build documentation
         run: mkdocs build
         
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: ./site
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./site
+          publish_branch: gh-pages
