Enhance footer with Material for MkDocs acknowledgement and enable footer navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ theme:
     - navigation.sections
     - navigation.expand
     - navigation.top
+    - navigation.footer
     - search.suggest
     - search.highlight
     - content.code.copy
